# decfec

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
gui/: Cargo.toml  default-layout.ron  index.html
gui/src/: app.rs  canvas.rs  engine.rs  lib.rs  main.rs
networks/: exemplo.ron  ref-exercise.ron
references/: regras-dec-fec.md  resolucao-ex-decfec.md
references/teste-deel-ufu/: questao-a.ron  questao-b.ron  questao-c.ron  questao-d.ron  questao-e.ron  questao-f.ron  questao-g-h.ron  rede.ron
scenarios/: item_a.ron
src/: fault.rs  lib.rs  main.rs  topology.rs
tests/: individual-indicators.rs  ref-exercise.rs
