[package]
name = "decfec-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
decfec = { path = ".." }
eframe = "0.34.3"
egui = "0.34.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.75"
web-sys = { version = "0.3.102", features = ["Window", "Document", "HtmlCanvasElement"] }
