[package]
name = "decfec-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
decfec = { path = ".." }
eframe = "0.34.3"
egui = "0.34.3"
ron = "0.8"
rfd = "0.15.4"
serde = "1.0.228"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.102"
wasm-bindgen-futures = "0.4.75"
web-sys = { version = "0.3.102", features = ["Blob", "BlobPropertyBag", "Document", "HtmlAnchorElement", "HtmlCanvasElement", "HtmlElement", "Node", "Url", "Window"] }
